--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@
 certifi==2020.6.20        # via requests
 chardet==3.0.4            # via requests
 idna==2.10                # via requests
+marshmallow==3.8.0        # via -r requirements.in
 numpy==1.19.2             # via pandas
 pandas==1.1.2             # via -r requirements.in
 python-dateutil==2.8.1    # via pandas
