--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,10 @@ jobs:
 workflows:
   main:
     jobs:
-      - lint-and-test
+      - lint-and-test:
+          filters: 
+            tags:
+              only: /.*/
       - build-and-deploy:
           requires:
             - lint-and-test
