--- a/requirements.in
+++ b/requirements.in
@@ -1,4 +1,5 @@
-requests==2.24.0
-pandas==1.1.2
-marshmallow==3.8.0
 azure-storage-blob==12.6.0
+marshmallow==3.8.0
+pandas>=1.2.0,<1.3.0
+pyarrow>=6.0.0,<7.0
+requests==2.24.0
