--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,9 @@ jobs:
       - checkout
       - python/install-packages:
           pkg-manager: pip
+          pip-dependency-file: requirements.txt
+      - python/install-dev-packages:
+          pkg-manager: pip
           pip-dependency-file: dev-requirements.txt
       - run:
           name: Verify Git tag and version
