--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - python/install-packages:
           pkg-manager: pip
           pip-dependency-file: requirements.txt
-      - python/install-dev-packages:
+      - python/install-packages:
           pkg-manager: pip
           pip-dependency-file: dev-requirements.txt
       - run:
