--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
       - checkout
       - python/install-packages:
           pkg-manager: pip
+          pip-dependency-file: requirements.txt
+      - python/install-packages:
+          pkg-manager: pip
           pip-dependency-file: dev-requirements.txt
       - run:
           name: Flake8
