Include docstrings; enforce RST docstrings with flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
 exclude = js,migrations,venv,_pgdata,_rabbitmq,_vm_node_modules,_vm_registry_folder,static,media,pipsrc
-select = C,E,F,W,B,B950
+select = C,E,F,W,B,B950,D,RST
 ignore = E203, E501, W503, E231
 max-line-length = 119
