--- a/requirements.in
+++ b/requirements.in
@@ -2,4 +2,7 @@ azure-storage-blob==12.6.0
 marshmallow>=3.8.0,<3.16.0
 pandas>=1.2.0,<1.5.0
 pyarrow>=6.0.0,<7.0
-requests>=2.24.0
+requests>=2.28.1
+numpy>=1.22.0,<2
+oauthlib>=3.2.1,<4
+urllib3>=1.26.5,<2
