ENG-2667: Peg versions of dependencies in common with web_main; raise an exception if get request fails

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,9 @@ version: 2.1
 
 jobs:
   lint-and-test:
-    executor: python/default
+    executor:
+      name: python/default
+      tag: "3.11"
     steps:
       - checkout
       - python/install-packages:
@@ -23,7 +25,9 @@ jobs:
           name: Test
           command: pytest tests
   build-and-deploy:
-    executor: python/default
+    executor:
+      name: python/default
+      tag: "3.11"
     steps:
       - checkout
       - python/install-packages:
@@ -37,12 +41,12 @@ jobs:
           name: Publish to Pypi
           command: twine upload dist/*
 
-        
+
 workflows:
   main:
     jobs:
       - lint-and-test:
-          filters: 
+          filters:
             tags:
               only: /.*/
       - build-and-deploy:
