--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 
 jobs:
   lint-and-test:
-    executor: python/default
+    executor: python/3.11
     steps:
       - checkout
       - python/install-packages:
@@ -23,7 +23,7 @@ jobs:
           name: Test
           command: pytest tests
   build-and-deploy:
-    executor: python/default
+    executor: python/3.11
     steps:
       - checkout
       - python/install-packages:
