--- a/requirements.in
+++ b/requirements.in
@@ -1,4 +1,5 @@
 azure-storage-blob==12.6.0
+backoff==2.2.1
 marshmallow>=3.8.0,<3.16.0
 pandas>=1.4.4,<1.5.0
 pyarrow>=12.0.0,<15.0
@@ -6,3 +7,4 @@ requests>=2.28.1
 numpy>=1.24.3,<2.0
 oauthlib>=3.2.1,<4
 urllib3>=1.26.5,<2
+pydantic-settings==2.2.1
