--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ oauthlib==3.2.2
     #   requests-oauthlib
 packaging==23.1
     # via marshmallow
-pandas==1.5.0
+pandas==2.2.2
     # via -r requirements.in
 pyarrow==14.0.1
     # via -r requirements.in
@@ -77,6 +77,8 @@ typing-extensions==4.11.0
     #   azure-core
     #   pydantic
     #   pydantic-core
+tzdata==2024.1
+    # via pandas
 urllib3==1.26.19
     # via
     #   -r requirements.in
